// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot Tests > should compile docs/examples/fft/fft_butterfly_complex.dsl 1`] = `
"0
"LWI R0, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"LWI R1, 4", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"SADD R2, R0, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
"SADD R3, R1, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
"LWI R0, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
5
"LWI R1, 16", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
6
"SMUL R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
7
"SWI R0, 40", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
8
"LWI R0, 12", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
9
"LWI R1, 20", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
10
"SMUL R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
11
"SWI R0, 52", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
12
"LWI R0, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
13
"LWI R1, 20", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
14
"SMUL R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
15
"SWI R0, 44", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
16
"LWI R0, 12", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
17
"LWI R1, 16", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
18
"SMUL R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
19
"SWI R0, 48", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
20
"LWI R0, 40", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
21
"LWI R1, 52", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
22
"SSUB R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
23
"SRA R0, R0, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
24
"SADD R2, R0, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
25
"LWI R0, 44", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
26
"LWI R1, 48", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
27
"SADD R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
28
"SRA R0, R0, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
29
"SADD R3, R0, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
30
"LWI R0, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
31
"LWI R1, 4", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
32
"SADD R0, R0, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
33
"SWI R0, 24", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
34
"LWI R0, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
35
"SSUB R0, R0, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
36
"SWI R0, 32", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
37
"SADD R1, R1, R3", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
38
"SWI R1, 28", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
39
"LWI R1, 4", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
40
"SSUB R1, R1, R3", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
41
"SWI R1, 36", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
42
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile docs/examples/fft/fft_butterfly_dual_complex.dsl 1`] = `
"0
"LWI R0, 0", "LWI R1, 4", "LWI R2, 8", "LWI R3, 12"
NOP, NOP, NOP, NOP
"LWI R0, 16", "LWI R1, 20", "LWI R2, 24", "LWI R3, 28"
NOP, NOP, NOP, NOP
1
NOP, NOP, NOP, NOP
"LWI R0, 32", "LWI R1, 36", "LWI R0, 32", "LWI R1, 36"
NOP, NOP, NOP, NOP
"LWI R0, 32", "LWI R1, 36", "LWI R0, 32", "LWI R1, 36"
2
NOP, NOP, "SADD ROUT, R2, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R2, ZERO", NOP
NOP, NOP, NOP, NOP
3
NOP, NOP, NOP, NOP
NOP, NOP, "SMUL R2, RCT, R0", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SMUL R2, RCT, R0", NOP
4
NOP, NOP, NOP, "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
5
NOP, NOP, NOP, NOP
NOP, NOP, NOP, "SMUL R3, RCT, R1"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, "SMUL R3, RCT, R1"
6
NOP, NOP, NOP, NOP
NOP, NOP, "SSUB R2, R2, R3", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SSUB R2, R2, R3", NOP
7
NOP, NOP, NOP, NOP
NOP, NOP, "SRA R2, R2, 8", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SRA R2, R2, 8", NOP
8
NOP, NOP, "SADD ROUT, R2, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R2, ZERO", NOP
NOP, NOP, NOP, NOP
9
NOP, NOP, "LWI R2, 8", "LWI R3, 12"
NOP, NOP, NOP, NOP
NOP, NOP, "LWI R2, 24", "LWI R3, 28"
NOP, NOP, NOP, NOP
10
NOP, NOP, "SADD ROUT, R2, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R2, ZERO", NOP
NOP, NOP, NOP, NOP
11
NOP, NOP, NOP, NOP
"SMUL R0, RCT, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SMUL R0, RCT, R1", NOP, NOP, NOP
12
NOP, NOP, NOP, "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
13
NOP, NOP, NOP, NOP
NOP, "SMUL R1, RCT, R0", NOP, NOP
NOP, NOP, NOP, NOP
NOP, "SMUL R1, RCT, R0", NOP, NOP
14
NOP, NOP, NOP, NOP
"SADD R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SADD R0, R0, R1", NOP, NOP, NOP
15
NOP, NOP, NOP, NOP
"SRA R3, R0, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SRA R3, R0, 8", NOP, NOP, NOP
16
"LWI R0, 0", "LWI R1, 4", NOP, NOP
NOP, NOP, NOP, NOP
"LWI R0, 16", "LWI R1, 20", NOP, NOP
NOP, NOP, NOP, NOP
17
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R2, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R2, ZERO", NOP
18
NOP, NOP, "SADD R2, RCB, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD R2, RCB, ZERO", NOP
NOP, NOP, NOP, NOP
19
"SADD R2, R0, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SADD R2, R0, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
20
"LWI R0, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
21
"LWI R1, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
22
"LWI R2, 32", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
23
"SMUL R1, R1, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
24
"LWI R2, 12", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
25
"LWI R3, 36", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
26
"SMUL R2, R2, R3", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
27
"SSUB R1, R1, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
28
"SRA R1, R1, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
29
"SADD R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
30
"SWI R0, 40", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
31
"LWI R0, 4", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
32
"LWI R1, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
33
"LWI R2, 36", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
34
"SMUL R1, R1, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
35
"LWI R2, 12", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
36
"LWI R3, 32", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
37
"SMUL R2, R2, R3", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
38
"SADD R1, R1, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
39
"SRA R1, R1, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
40
"SADD R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
41
"SWI R0, 44", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
42
"LWI R0, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
43
"SADD R1, ZERO, 68", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
44
"SSUB R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
45
"SWI R0, 48", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
46
"LWI R0, 4", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
47
"SADD R1, ZERO, 4", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
48
"SSUB R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
49
"SWI R0, 52", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
50
"LWI R0, 16", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
51
"SADD R1, ZERO, 72", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
52
"SADD R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
53
"SWI R0, 56", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
54
"LWI R0, 20", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
55
"SSUB R1, ZERO, 5", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
56
"SADD R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
57
"SWI R0, 60", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
58
"LWI R0, 16", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
59
"SADD R1, ZERO, 72", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
60
"SSUB R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
61
"SWI R0, 64", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
62
"LWI R0, 20", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
63
"SSUB R1, ZERO, 5", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
64
"SSUB R0, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
65
"SWI R0, 68", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
66
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile docs/examples/fft/fft_butterfly_full_dfg.dsl 1`] = `
"0
"LWI R0, 0", "LWI R1, 4", "LWI R2, 8", "LWI R3, 12"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
NOP, NOP, NOP, NOP
"LWI R0, 16", "LWI R1, 20", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
NOP, NOP, "SADD ROUT, R2, ZERO", "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
NOP, NOP, NOP, NOP
"SMUL R2, R0, RCT", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
NOP, NOP, "SADD ROUT, R2, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
5
NOP, NOP, NOP, NOP
NOP, NOP, "SADD R2, RCT, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
6
NOP, NOP, NOP, "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
7
NOP, NOP, NOP, NOP
NOP, NOP, NOP, "SADD R2, RCT, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
8
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R2, ZERO", "SADD ROUT, R2, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
9
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD R0, RCT, ZERO", "SADD R0, RCT, ZERO"
NOP, NOP, NOP, NOP
10
"SADD ROUT, R0, ZERO", "SADD ROUT, R1, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
11
NOP, NOP, NOP, NOP
"SADD ROUT, RCT, ZERO", "SADD ROUT, RCT, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
12
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SADD R1, RCT, ZERO", "SADD R1, RCT, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
13
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R0, ZERO", NOP
NOP, NOP, NOP, NOP
14
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, "SADD ROUT, RCR, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
15
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SADD R2, R1, RCR", NOP, NOP, NOP
NOP, NOP, NOP, NOP
16
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SWI R2, 24", NOP, NOP, NOP
NOP, NOP, NOP, NOP
17
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, "SADD ROUT, R0, ZERO"
NOP, NOP, NOP, NOP
18
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, RCR, ZERO", NOP
NOP, NOP, NOP, NOP
19
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, "SADD R2, R1, RCR", NOP, NOP
NOP, NOP, NOP, NOP
20
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, "SWI R2, 28", NOP, NOP
NOP, NOP, NOP, NOP
21
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R0, ZERO", NOP
NOP, NOP, NOP, NOP
22
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, "SADD ROUT, RCR, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
23
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SSUB R2, R1, RCR", NOP, NOP, NOP
NOP, NOP, NOP, NOP
24
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SWI R2, 32", NOP, NOP, NOP
NOP, NOP, NOP, NOP
25
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, "SADD ROUT, R0, ZERO"
NOP, NOP, NOP, NOP
26
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, RCR, ZERO", NOP
NOP, NOP, NOP, NOP
27
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, "SSUB R2, R1, RCR", NOP, NOP
NOP, NOP, NOP, NOP
28
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, "SWI R2, 36", NOP, NOP
NOP, NOP, NOP, NOP
29
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile docs/examples/fft/fft_butterfly_simple.dsl 1`] = `
{
  "error": "Expected SEMICOLON, but found NUMBER('1')",
  "line": 103,
}
`;

exports[`Snapshot Tests > should compile docs/examples/fft/fft_dual_optimized.dsl 1`] = `
"0
"LWI R0, 0", "LWI R1, 4", "LWI R2, 8", "LWI R3, 12"
NOP, NOP, NOP, NOP
"LWI R0, 16", "LWI R1, 20", "LWI R2, 24", "LWI R3, 28"
NOP, NOP, NOP, NOP
1
NOP, NOP, NOP, NOP
"LWI R0, 32", "LWI R1, 36", "LWI R0, 32", "LWI R1, 36"
NOP, NOP, NOP, NOP
"LWI R0, 32", "LWI R1, 36", "LWI R0, 32", "LWI R1, 36"
2
NOP, NOP, "SADD ROUT, R2, ZERO", "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R2, ZERO", "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
3
NOP, NOP, NOP, NOP
NOP, NOP, "SMUL R2, RCT, R0", "SMUL R3, RCT, R1"
NOP, NOP, NOP, NOP
NOP, NOP, "SMUL R2, RCT, R0", "SMUL R3, RCT, R1"
4
NOP, NOP, NOP, NOP
NOP, NOP, NOP, "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, "SADD ROUT, R3, ZERO"
5
NOP, NOP, NOP, NOP
NOP, NOP, "SSUB R2, R2, RCR", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SSUB R2, R2, RCR", NOP
6
NOP, NOP, NOP, NOP
NOP, NOP, "SRA R2, R2, 8", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SRA R2, R2, 8", NOP
7
NOP, NOP, "SADD ROUT, R2, ZERO", "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R2, ZERO", "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
8
NOP, NOP, NOP, NOP
"SMUL R3, RCT, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SMUL R3, RCT, R1", NOP, NOP, NOP
9
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R2, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R2, ZERO", NOP
10
NOP, NOP, "SADD R2, RCB, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD R2, RCB, ZERO", NOP
NOP, NOP, NOP, NOP
11
NOP, NOP, NOP, "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
12
"SADD R0, R0, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
13
"SADD R3, ZERO, 68", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
14
"SADD R0, R0, R3", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
15
"SWI R0, 40", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
16
NOP, "SADD R3, ZERO, 4", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
17
NOP, "SADD R1, R1, R3", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
18
NOP, "SWI R1, 44", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
19
"LWI R0, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
20
"SADD R3, ZERO, 68", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
21
"SSUB R0, R0, R3", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
22
"SWI R0, 48", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
23
"LWI R1, 4", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
24
"SADD R3, ZERO, 4", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
25
"SSUB R1, R1, R3", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
26
"SWI R1, 52", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
27
"LWI R0, 16", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
28
"SADD R3, ZERO, 72", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
29
"SADD R0, R0, R3", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
30
"SWI R0, 56", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
31
"LWI R1, 20", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
32
"SSUB R3, ZERO, 5", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
33
"SADD R1, R1, R3", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
34
"SWI R1, 60", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
35
"LWI R0, 16", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
36
"SADD R3, ZERO, 72", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
37
"SSUB R0, R0, R3", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
38
"SWI R0, 64", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
39
"LWI R1, 20", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
40
"SSUB R3, ZERO, 5", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
41
"SSUB R1, R1, R3", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
42
"SWI R1, 68", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
43
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile docs/examples/fft/fft_dual_parallel.dsl 1`] = `
"0
"LWI R0, 0", "LWI R0, 4", "LWI R0, 8", NOP
NOP, NOP, NOP, NOP
"LWI R0, 12", "LWI R0, 16", "LWI R0, 20", NOP
NOP, NOP, NOP, NOP
1
NOP, "SADD ROUT, R0, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
NOP, "SADD ROUT, R0, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
2
NOP, NOP, "SMUL R1, R0, RCL", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SMUL R1, R0, RCL", NOP
NOP, NOP, NOP, NOP
3
NOP, NOP, "SADD ROUT, R1, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R1, ZERO", NOP
NOP, NOP, NOP, NOP
4
NOP, "SADD ROUT, RCR, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
NOP, "SADD ROUT, RCR, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
5
NOP, NOP, NOP, NOP
"LWI R0, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
"LWI R0, 12", NOP, NOP, NOP
6
NOP, NOP, "SADD ROUT, R1, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R1, ZERO", NOP
NOP, NOP, NOP, NOP
7
NOP, "SADD ROUT, RCR, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
NOP, "SADD ROUT, RCR, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
8
"SADD R1, R0, RCR", NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SADD R1, R0, RCR", NOP, NOP, NOP
NOP, NOP, NOP, NOP
9
NOP, NOP, "SADD ROUT, R1, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R1, ZERO", NOP
NOP, NOP, NOP, NOP
10
NOP, "SADD ROUT, RCR, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
NOP, "SADD ROUT, RCR, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
11
NOP, NOP, NOP, NOP
"SSUB R2, R0, RCR", NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SSUB R2, R0, RCR", NOP, NOP, NOP
12
"SWI R1, 24", NOP, NOP, NOP
"SWI R2, 28", NOP, NOP, NOP
"SWI R1, 32", NOP, NOP, NOP
"SWI R2, 36", NOP, NOP, NOP
13
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile docs/examples/fft/fft_dual_ultra.dsl 1`] = `
"0
"LWI R0, 0", "LWI R1, 4", "LWI R2, 8", "LWI R3, 12"
"LWI R0, 32", "LWI R1, 36", "LWI R0, 32", "LWI R1, 36"
"LWI R0, 16", "LWI R1, 20", "LWI R2, 24", "LWI R3, 28"
"LWI R0, 32", "LWI R1, 36", "LWI R0, 32", "LWI R1, 36"
1
NOP, NOP, "SADD ROUT, R2, ZERO", "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R2, ZERO", "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
2
NOP, NOP, NOP, NOP
NOP, NOP, "SMUL R2, RCT, R0", "SMUL R3, RCT, R1"
NOP, NOP, NOP, NOP
NOP, NOP, "SMUL R2, RCT, R0", "SMUL R3, RCT, R1"
3
NOP, NOP, NOP, NOP
NOP, NOP, NOP, "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, "SADD ROUT, R3, ZERO"
4
NOP, NOP, NOP, NOP
NOP, NOP, "SRA R2, R2, 8", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SRA R2, R2, 8", NOP
5
NOP, NOP, NOP, NOP
NOP, NOP, "SSUB R2, R2, RCR", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SSUB R2, R2, RCR", NOP
6
NOP, NOP, NOP, NOP
NOP, NOP, "SRA R2, R2, 8", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SRA R2, R2, 8", NOP
7
NOP, NOP, "SADD ROUT, R2, ZERO", "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R2, ZERO", "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
8
NOP, NOP, "SADD ROUT, R2, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, "SADD ROUT, R2, ZERO", NOP
NOP, NOP, NOP, NOP
9
NOP, NOP, NOP, NOP
NOP, "SMUL R2, RCT, R1", NOP, NOP
NOP, NOP, NOP, NOP
NOP, "SMUL R2, RCT, R1", NOP, NOP
10
NOP, NOP, NOP, "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, "SADD ROUT, R3, ZERO"
NOP, NOP, NOP, NOP
11
NOP, NOP, NOP, NOP
"SMUL R3, RCT, R0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SMUL R3, RCT, R0", NOP, NOP, NOP
12
NOP, NOP, NOP, NOP
NOP, "SADD ROUT, R2, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
NOP, "SADD ROUT, R2, ZERO", NOP, NOP
13
NOP, NOP, NOP, NOP
"SADD R3, R3, RCR", NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SADD R3, R3, RCR", NOP, NOP, NOP
14
NOP, NOP, NOP, NOP
"SRA R3, R3, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SRA R3, R3, 8", NOP, NOP, NOP
15
NOP, NOP, NOP, NOP
"SADD ROUT, R3, ZERO", NOP, "SADD ROUT, R2, ZERO", NOP
NOP, NOP, NOP, NOP
"SADD ROUT, R3, ZERO", NOP, "SADD ROUT, R2, ZERO", NOP
16
"SADD R3, RCB, ZERO", NOP, "SADD R2, RCB, ZERO", NOP
NOP, NOP, NOP, NOP
"SADD R3, RCB, ZERO", NOP, "SADD R2, RCB, ZERO", NOP
NOP, NOP, NOP, NOP
17
"SADD R2, ZERO, 68", "SADD R2, ZERO, 4", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
18
"SADD R3, R0, R2", "SADD R3, R1, R2", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
19
"SWI R3, 40", "SWI R3, 44", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
20
"SSUB R3, R0, R2", "SSUB R3, R1, R2", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
21
"SWI R3, 48", "SWI R3, 52", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
22
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SADD R2, ZERO, 72", "SSUB R2, ZERO, 5", NOP, NOP
NOP, NOP, NOP, NOP
23
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SADD R3, R0, R2", "SADD R3, R1, R2", NOP, NOP
NOP, NOP, NOP, NOP
24
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SWI R3, 56", "SWI R3, 60", NOP, NOP
NOP, NOP, NOP, NOP
25
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SSUB R3, R0, R2", "SSUB R3, R1, R2", NOP, NOP
NOP, NOP, NOP, NOP
26
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SWI R3, 64", "SWI R3, 68", NOP, NOP
NOP, NOP, NOP, NOP
27
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/applications/dot-product.dsl 1`] = `
"0
"LWI R0, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
NOP, "LWI R0, 4", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
NOP, NOP, "LWI R0, 8", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
NOP, NOP, NOP, "LWI R0, 12"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
"LWI R1, 16", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
5
NOP, "LWI R1, 20", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
6
NOP, NOP, "LWI R1, 24", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
7
NOP, NOP, NOP, "LWI R1, 28"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
8
"SMUL R2, R0, R1", "SMUL R2, R0, R1", "SMUL R2, R0, R1", "SMUL R2, R0, R1"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
9
"SADD R2, R2, ZERO", "SADD R2, R2, ZERO", "SADD R2, R2, ZERO", "SADD R2, R2, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
10
"SADD R2, R2, RCR", NOP, "SADD R2, R2, RCR", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
11
NOP, "SADD R3, RCR, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
12
"SADD R3, R2, RCR", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
13
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/applications/matmul-2x2.dsl 1`] = `
"0
"SADD R3, ZERO, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"LWI R0, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"LWI R1, 16", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
"SMUL R2, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
"SADD R3, R3, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
5
"LWI R0, 4", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
6
"LWI R1, 24", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
7
"SMUL R2, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
8
"SADD R3, R3, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
9
"SWI R3, 32", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
10
"SADD R3, ZERO, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
11
"LWI R0, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
12
"LWI R1, 20", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
13
"SMUL R2, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
14
"SADD R3, R3, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
15
"LWI R0, 4", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
16
"LWI R1, 28", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
17
"SMUL R2, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
18
"SADD R3, R3, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
19
"SWI R3, 36", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
20
"SADD R3, ZERO, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
21
"LWI R0, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
22
"LWI R1, 16", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
23
"SMUL R2, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
24
"SADD R3, R3, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
25
"LWI R0, 12", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
26
"LWI R1, 24", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
27
"SMUL R2, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
28
"SADD R3, R3, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
29
"SWI R3, 40", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
30
"SADD R3, ZERO, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
31
"LWI R0, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
32
"LWI R1, 20", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
33
"SMUL R2, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
34
"SADD R3, R3, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
35
"LWI R0, 12", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
36
"LWI R1, 28", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
37
"SMUL R2, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
38
"SADD R3, R3, R2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
39
"SWI R3, 44", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
40
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/applications/vector-add.dsl 1`] = `
"0
"LWI R0, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
NOP, "LWI R0, 4", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
NOP, NOP, "LWI R0, 8", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
NOP, NOP, NOP, "LWI R0, 12"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
"LWI R1, 16", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
5
NOP, "LWI R1, 20", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
6
NOP, NOP, "LWI R1, 24", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
7
NOP, NOP, NOP, "LWI R1, 28"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
8
"SADD R2, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
9
NOP, "SADD R2, R0, R1", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
10
NOP, NOP, "SADD R2, R0, R1", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
11
NOP, NOP, NOP, "SADD R2, R0, R1"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
12
"SWI R2, 32", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
13
NOP, "SWI R2, 36", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
14
NOP, NOP, "SWI R2, 40", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
15
NOP, NOP, NOP, "SWI R2, 44"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
16
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/basic/constants.dsl 1`] = `
"0
"SADD R0, ZERO, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SADD R1, ZERO, 100", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"SADD R0, R0, 4", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/basic/data2d.dsl 1`] = `
"0
"LWI R0, 0", "LWI R0, 12", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SADD ROUT, R0, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
NOP, "SADD R1, R0, RCL", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/basic/hello.dsl 1`] = `
"0
"SADD R0, ZERO, 42", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/basic/named-arrays.dsl 1`] = `
"0
"LWI R0, 0", "LWI R0, 12", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SWI R0, 16", "SWI R0, 20", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/control-flow/for-basic.dsl 1`] = `
"0
"SADD R0, ZERO, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SADD R0, R0, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"SADD R0, R0, 1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
"SADD R0, R0, 2", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
"SADD R0, R0, 3", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
5
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/control-flow/for-step.dsl 1`] = `
"0
"LWI R0, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"LWI R0, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"LWI R0, 16", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
"LWI R0, 24", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/control-flow/if-else.dsl 1`] = `
"0
"SADD R0, ZERO, 5", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"BNE R0, 5, 4", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"SADD R1, ZERO, 1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
"JUMP 5, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
"SADD R1, ZERO, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
5
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/control-flow/nested-loops.dsl 1`] = `
"0
"SADD R0, ZERO, 0", "SADD R0, ZERO, 0", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SADD R0, ZERO, 0", "SADD R0, ZERO, 1", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"SADD R0, ZERO, 1", "SADD R0, ZERO, 0", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
"SADD R0, ZERO, 1", "SADD R0, ZERO, 1", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/control-flow/while-loop.dsl 1`] = `
"0
"SADD R0, ZERO, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"BGE R0, 10, 4", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"SADD R0, R0, 1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
"JUMP 1, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/functions/basic-function.dsl 1`] = `
"0
"SADD R0, ZERO, 10", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SADD R1, ZERO, 20", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"SADD R2, ZERO, 30", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
"SADD R3, R0, R1", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/parallel/broadcast.dsl 1`] = `
"0
"SADD R0, ZERO, 99", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SADD ROUT, R0, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
NOP, "SADD ROUT, R0, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
NOP, NOP, "SADD ROUT, R0, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
NOP, NOP, NOP, "SADD R0, RCL, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
5
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/parallel/parallel-simple.dsl 1`] = `
"0
"SADD R0, ZERO, 0", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
NOP, "SADD R0, ZERO, 1", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
NOP, NOP, "SADD R0, ZERO, 2", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
NOP, NOP, NOP, "SADD R0, ZERO, 3"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/parallel/reduce.dsl 1`] = `
"0
"SADD R0, ZERO, 10", "SADD R0, ZERO, 20", "SADD R0, ZERO, 30", "SADD R0, ZERO, 40"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SADD R2, R0, ZERO", "SADD R2, R0, ZERO", "SADD R2, R0, ZERO", "SADD R2, R0, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"SADD R2, R0, RCR", NOP, "SADD R2, R0, RCR", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
NOP, "SADD R3, RCR, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
"SADD R1, R2, RCR", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
5
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/parallel/reduce-vertical.dsl 1`] = `
"0
"SADD R0, ZERO, 10", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
NOP, NOP, NOP, NOP
"SADD R0, ZERO, 20", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SADD R0, ZERO, 30", NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SADD R0, ZERO, 40", NOP, NOP, NOP
4
"SADD R2, R0, ZERO", NOP, NOP, NOP
"SADD R2, R0, ZERO", NOP, NOP, NOP
"SADD R2, R0, ZERO", NOP, NOP, NOP
"SADD R2, R0, ZERO", NOP, NOP, NOP
5
"SADD R2, R0, RCB", NOP, NOP, NOP
NOP, NOP, NOP, NOP
"SADD R2, R0, RCB", NOP, NOP, NOP
NOP, NOP, NOP, NOP
6
NOP, NOP, NOP, NOP
"SADD R3, RCB, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
7
"SADD R1, R2, RCB", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
8
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/parallel/rotate.dsl 1`] = `
"0
"SADD R0, ZERO, 10", "SADD R0, ZERO, 20", "SADD R0, ZERO, 30", "SADD R0, ZERO, 40"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SADD ROUT, R0, ZERO", "SADD ROUT, R0, ZERO", "SADD ROUT, R0, ZERO", "SADD ROUT, R0, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"SADD R0, RCR, ZERO", "SADD R0, RCR, ZERO", "SADD R0, RCR, ZERO", "SADD R0, RCR, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/parallel/route.dsl 1`] = `
"0
"SADD R0, ZERO, 42", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SADD ROUT, R0, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
NOP, "SADD ROUT, RCL, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
NOP, NOP, "SADD R1, R1, RCL", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/parallel/scan.dsl 1`] = `
"0
"SADD R0, ZERO, 1", "SADD R0, ZERO, 2", "SADD R0, ZERO, 3", "SADD R0, ZERO, 4"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SADD R0, R1, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"SADD ROUT, R0, ZERO", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
NOP, "SADD R0, R0, RCL", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
NOP, "SADD ROUT, R0, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
5
NOP, NOP, "SADD R0, R0, RCL", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
6
NOP, NOP, "SADD ROUT, R0, ZERO", NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
7
NOP, NOP, NOP, "SADD R0, R0, RCL"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
8
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/parallel/shift.dsl 1`] = `
"0
"SADD R0, ZERO, 10", "SADD R0, ZERO, 20", "SADD R0, ZERO, 30", "SADD R0, ZERO, 40"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SADD ROUT, R0, ZERO", "SADD ROUT, R0, ZERO", "SADD ROUT, R0, ZERO", "SADD ROUT, R0, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"SADD R0, ZERO, 0", "SADD R0, RCL, ZERO", "SADD R0, RCL, ZERO", "SADD R0, RCL, ZERO"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/parallel/stencil-cross.dsl 1`] = `
"0
"SADD R0, ZERO, 1", "SADD R0, ZERO, 2", NOP, NOP
"SADD R0, ZERO, 3", "SADD R0, ZERO, 4", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SADD R2, R1, RCT", "SADD R2, R1, RCT", "SADD R2, R1, RCT", "SADD R2, R1, RCT"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"SADD R2, R2, RCB", "SADD R2, R2, RCB", "SADD R2, R2, RCB", "SADD R2, R2, RCB"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
"SADD R2, R2, RCL", "SADD R2, R2, RCL", "SADD R2, R2, RCL", "SADD R2, R2, RCL"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
"SADD R0, R2, RCR", "SADD R0, R2, RCR", "SADD R0, R2, RCR", "SADD R0, R2, RCR"
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
5
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;

exports[`Snapshot Tests > should compile examples/simple.dsl 1`] = `
"0
"LWI R0, 0", "LWI R0, 4", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
1
"SADD R0, ROUT, ZERO", "SADD ROUT, R0, ZERO", NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
2
"SADD R1, R0, RCR", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
3
"SWI R1, 8", NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
4
EXIT, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP
NOP, NOP, NOP, NOP"
`;
